[gd_scene load_steps=8 format=3 uid="uid://bahnlsvo1ethx"]

[ext_resource type="Theme" uid="uid://7qtjarwklgd2" path="res://ui/Themes/ui_theme.tres" id="1_k577y"]
[ext_resource type="Script" uid="uid://dpylydiyio0ob" path="res://ui/gameplay_ui/shop_item.gd" id="1_mgmnk"]
[ext_resource type="Texture2D" uid="uid://blt4ci75jxr2m" path="res://ui/Themes/ui_button_texture_2.png" id="2_4q0gy"]
[ext_resource type="Texture2D" uid="uid://df3vmvvomkt0j" path="res://Assets/Icons/HookIcon.png" id="2_7kxbi"]
[ext_resource type="PackedScene" uid="uid://b2wuithykkaes" path="res://ui/click_sound_player.tscn" id="3_pne7h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_almtl"]
texture = ExtResource("2_4q0gy")
texture_margin_left = 24.0
texture_margin_top = 24.0
texture_margin_right = 24.0
texture_margin_bottom = 24.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 512, 512)
modulate_color = Color(1, 1, 1, 0.4392157)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pne7h"]

[node name="ShopItem" type="PanelContainer"]
offset_right = 394.745
offset_bottom = 196.0
size_flags_vertical = 0
mouse_filter = 1
theme = ExtResource("1_k577y")
theme_override_styles/panel = SubResource("StyleBoxTexture_almtl")
script = ExtResource("1_mgmnk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameAndIcon" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="VBoxContainer/NameAndIcon"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_7kxbi")
expand_mode = 4
stretch_mode = 5

[node name="FlavorEstate" type="PanelContainer" parent="VBoxContainer/NameAndIcon"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pne7h")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/NameAndIcon/FlavorEstate"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ItemName" type="Label" parent="VBoxContainer/NameAndIcon/FlavorEstate/PanelContainer"]
layout_mode = 2
text = "Upgrade Text"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ItemPrice" type="Label" parent="VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "100"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Buy"

[node name="ClickSoundPlayer" parent="." instance=ExtResource("3_pne7h")]
